--- a/gb/20/8/25/n12355274.md
+++ b/gb/20/8/25/n12355274.md
@@ -1,70 +1,71 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ejzkav3446/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ejzkav3446/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ejzkav3446/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ejzkav3446/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ejzkav3446/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ejzkav3446/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ejzkav3446/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ejzkav3446/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ejzkav3446/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ejzkav3446/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ejzkav3446/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ejzkav3446/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ejzkav3446/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ejzkav3446/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ejzkav3446/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>晶片厂商武汉弘芯陷财困 资金链恐随时断裂</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/3e575b67f6aad029bb52824a00dd99e4-600x400.jpg" />
-<h6>图为晶片示意图。 (NICOLAS ASFOURI/AFP via Getty Images)
+<h6>图为晶片示意图。(NICOLAS ASFOURI/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年08月25日讯】（大纪元记者刘毅报导）中共湖北省武汉市官方日前发布消息说，<ahref="https://github.com/ejzkav3446/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E5%BC%98%E8%8A%AF.md#1">武汉弘芯</a>半导体“存在较大资金缺口，随时面临资金链断裂导致项目停滞的风险。”不过，该报告已经在官网删除。</p>
-<p>据联合新闻网及大陆半导体职业联盟等多家媒体消息，中共武汉市东西湖区政府官方发布《上半年东西湖区投资建设领域经济运行分析》报告显示：<ahref="https://github.com/ejzkav3446/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E5%BC%98%E8%8A%AF.md#1">武汉弘芯</a>半导体（弘芯）制造项目是东西湖区投资领域面临挑战的首个案例，但弘芯项目“存在较大资金缺口，随时面临<ahref="https://github.com/ejzkav3446/djy/blob/master/gb/tag/%E8%B5%84%E9%87%91%E9%93%BE%E6%96%AD%E8%A3%82.md#1">资金链断裂</a>导致项目停滞的风险。”</p>
+	<p>【大纪元2020年08月25日讯】（大纪元记者刘毅报导）中共湖北省武汉市官方日前发布消息说，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E5%BC%98%E8%8A%AF.md#1">武汉弘芯</a>半导体“存在较大资金缺口，随时面临资金链断裂导致项目停滞的风险”。不过，该报告已经在官网删除。</p>
+<p><strong>【音频版】</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow:hidden;"><a style="width: 100%; height: 170px;" frameborder="no" allow="autoplay" scrolling="no" seamless src="https://player.captivate.fm/episode/a134a479-a780-4b80-9ab8-856337c494e2"></a></div>
+<p>据联合新闻网及大陆半导体职业联盟等多家媒体消息，中共武汉市东西湖区政府官方发布《上半年东西湖区投资建设领域经济运行分析》报告显示：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E5%BC%98%E8%8A%AF.md#1">武汉弘芯</a>半导体（简称“弘芯”）制造项目是东西湖区投资领域面临挑战的首个案例，但弘芯项目“存在较大资金缺口，随时面临<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B5%84%E9%87%91%E9%93%BE%E6%96%AD%E8%A3%82.md#1">资金链断裂</a>导致项目停滞的风险”。</p>
 <p>报告称，弘芯二期用地一直未完成土地调规和出让，且专案缺少土地、环评等支撑材料，无法上报中共发改委指导，导致当局半导体大基金、其它股权基金无法导入。</p>
 <p>这是武汉官方首次提及弘芯当前的危机，但从2019年底因诉讼造成土地冻结之后，业内关于弘芯难以为继的猜测早已此起彼伏。</p>
-<p>武汉弘芯之所以受到外界关注，一是其成立之初被大陆称为肩负2025年之前完成半导体独立自主使命的关键企业之一。另外，弘芯和大陆另外一家企业从台积电挖走了100多名资深工程师和管理人员。</p>
+<p>武汉弘芯之所以受到外界关注，一是其成立之初被大陆称为肩负2025年之前完成半导体独立自主使命的关键企业之一。另外，弘芯和大陆另外一家企业从台积电挖走了一百多名资深工程师和管理人员。</p>
 <p>武汉弘芯2017年11月在武汉东西湖区正式成立，号称总投资人民币1280亿元（人民币，下同），在随后的2018年和2019年，弘芯两度入选了湖北省重大专案，却又在2020年被移出。但仍列“武汉市重大项目”。</p>
 <p>截至2019年底已累计完成投资人民币153亿元，预计2020年投资额为87亿元。</p>
 <p>但是，在2019年11月，弘芯因拖欠分包商武汉环宇基础建设的4100万元工程款而被告上法庭，弘芯公司账户被冻结，二期价值人民币7530万元的土地也因此被查封，这块被查封的土地此前也已经被弘芯用于抵押贷款。</p>
 <p>虽然事发后弘芯的总包商武汉火炬建设集团公开向弘芯发布致歉信，并声明弘芯未曾拖欠火炬的工程进度款。但弘芯巨大的资金缺口还是引发了外界关注。</p>
-<p>另据《财经新报》消息，另一家亚翔集成也公开表示弘芯拖欠工程款。亚翔集成在2020半年报中提到，武汉弘芯专案自政府允许复工后，暂未收到相应的工程进度款。按照合同约定计算，至2019 年底，亚翔应确认收入2.98亿元，但实际确认金额只有2.5亿元。</p>
+<p>另据《财经新报》消息，另一家亚翔集成也公开表示弘芯拖欠工程款。亚翔集成在2020半年报中提到，武汉弘芯专案自政府允许复工后，暂未收到相应的工程进度款。按照合同约定计算，至2019年底，亚翔应确认收入2.98亿元，但实际确认金额只有2.5亿元。</p>
 <p>2019年12月，弘芯高调举行的“ASML光刻机入场仪式”，掩盖了资金困境，实际上，这台价值5.8亿元的光刻机刚刚入场就被用于抵押贷款，除了这台光刻机，目前弘芯厂区的设备寥寥无几。</p>
-<p>据悉，弘芯原计划购置设备3,560台套，但根据东西湖区统计局的分析报告，目前专案一期生产线仅有300多台套设备，处于订购和进厂阶段，产线规模大幅度缩水。而且，即便只有少数设备进厂，弘芯也未能付清尾款。台湾帆宣系统科技日前就因未收到尾款而将卖给弘芯的设备从厂区撤走。</p>
+<p>据悉，弘芯原计划购置设备3,560台套，但根据东西湖区统计局的分析报告，目前专案一期生产线仅有三百多台套设备，处于订购和进厂阶段，产线规模大幅度缩水。而且，即便只有少数设备进厂，弘芯也未能付清尾款。台湾帆宣系统科技日前就因未收到尾款而将卖给弘芯的设备从厂区撤走。</p>
 <p>因为入厂的设备较少，令已经到职的四五百名工人工无法进行生产线实际练习。因此，2020年以来，弘芯要求部分已经收到通知的候选员工延迟报到。</p>
-<p>报导表示，以目前的状况来看，弘芯规划中的14奈米、7奈米<ahref="https://github.com/ejzkav3446/djy/blob/master/gb/tag/%E6%99%B6%E7%89%87.md#1">晶片</a>生产线几乎确定无法达成。</p>
-<p>而且《科技信报》的消息显示，现任中国武汉弘芯半导体执行长、台积电前共同营运长蒋尚义（被部属昵称“蒋爸”）传出萌生退意的消息。目前蒋尚义仍然在武汉。对于产生退意的传闻，蒋尚义是表示，现在公司是有些问题有待解决，其它方面则不愿意多谈。</p>
-<p>对于蒋尚义传出萌生退意的消息，前外资知名分析师陆行之在个人 脸书（Facebook）上表示：“看起来这次蒋爸和一群跟着蒋爸过去的前台积人被投资方愚弄了，资金没到位，又坏了名声。”</p>
+<p>报导表示，以目前的状况来看，弘芯规划中的14奈米、7奈米<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%B6%E7%89%87.md#1">晶片</a>生产线几乎确定无法达成。</p>
+<p>而且《科技信报》的消息显示，现任中国武汉弘芯半导体执行长、台积电前共同营运长蒋尚义（被部属昵称“蒋爸”）传出萌生退意的消息。目前蒋尚义仍然在武汉。对于产生退意的传闻，蒋尚义表示，现在公司是有些问题有待解决，其它方面则不愿意多谈。</p>
+<p>对于蒋尚义传出萌生退意的消息，前外资知名分析师陆行之在个人脸书（Facebook）上表示：“看起来这次蒋爸和一群跟着蒋爸过去的前台积人被投资方愚弄了，资金没到位，又坏了名声。”</p>
 <p>财经评论员王剑曾经表示，台积电过去的人到当地看到环境很差，很多人就又回到台湾，但是台积电并没有重新接纳他们。</p>
-<p>责任编辑：林琮文</p>
+<p>责任编辑：林琮文#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/5/25/n12135250.md#1">日媒：中芯晶片技术较落后 难以代替台积电</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/7/16/n12260760.md#1">全球晶片厂市值排行 台积电赢三星居第一</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/7/31/n12297610.md#1">忧美国对香港出口管制  中国心急大采购晶片</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/12/n12325492.md#1">华为晶片面临危机 分析师：仅剩5个选项</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/25/n12135250.md#1">日媒：中芯晶片技术较落后 难以代替台积电</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/16/n12260760.md#1">全球晶片厂市值排行 台积电赢三星居第一</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/31/n12297610.md#1">忧美国对香港出口管制  中国心急大采购晶片</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/12/n12325492.md#1">华为晶片面临危机 分析师：仅剩5个选项</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10687820.md#1" target="_blank">一位中国花季少女给奶奶的那个吻</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/13/n12326957.md#1">孟尝君“狡兔三窟”为何绝子绝孙？</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/16/n12335682.md#1">神秘的中国绝代王后（下）</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/16/11/19/n8507459.md#1">世上多少名利客 怎解捂脸支画工？</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/16/n12334982.md#1">【人间云游】苏东坡梦中启前生  萧瑟处悟真理</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/21/n12347600.md#1">七夕有哪些古风情？考古发现源流久远</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/25/n12355300.md#1">【拍案惊奇】新疆封城憋到疯 数字币为维稳？</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/22/n12350007.md#1">【一线采访视频版】中共生产病毒疫苗？毒疫苗受害者仍在维权</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/24/n12354783.md#1">中医推荐“养脾胃三宝”摆脱疲劳、胃病又降压</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/23/n12351666.md#1">传共机空中挑衅蔡英文专机 台空军回应</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/23/n12350776.md#1">习近平安徽视察 地方事先策划 媒体被揭造假</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/23/n12350935.md#1">应对美中金融脱钩 中共数字人民币的险路</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/23/n12351787.md#1">黄秋生返港大赞台湾 悲叹香港千疮百孔</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/23/n12350862.md#1">5566港都首唱 王仁甫携女儿亮相大跳BTS舞蹈</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/23/n12351932.md#1">小童被迫看捧习书籍 杜汶泽嘲讽中共</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/23/n12352130.md#1">58岁知名导演陈木胜罹癌离世 香港众星悼念</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/24/n12353098.md#1">李孝利喊“毛”触中国玻璃心 令外国网友咋舌</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/5/n12308945.md#1">一只吹风机保养全身！这样吹增强免疫力 改善慢性病</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/22/n12350389.md#1">燕麦控三高助减肥 有7大好处 挑对更能稳血糖</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/23/n12351096.md#1">四川母狗跳入洪水中救回宝宝 感动人心</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/23/n12351199.md#1">日本农民在成田机场种菜几十年 就是不搬走</a></li>
-<li><a href="https://github.com/ejzkav3446/djy/blob/master/gb/20/8/22/n12349911.md#1">南极惊现超百米神秘“冰船” 似有窗户和烟囱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ejzkav3446/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ejzkav3446/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/25/n12355274.htm">晶片厂商武汉弘芯陷财困 资金链恐随时断裂</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/25/n12355274.htm">晶片厂商武汉弘芯陷财困 资金链恐随时断裂</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/ejzkav3446/djy/blob/master/gb/20/8/25/n12355274.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ejzkav3446/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ejzkav3446/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ejzkav3446/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ejzkav3446/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ejzkav3446/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/8/25/n12355274.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
